log
Thu May 12 15:23:51 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:22: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
             pushBack(lista,adj);
                      ^~~~~
                      list
sudoku.c:62:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dcac471
Thu May 12 15:24:00 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d3bdc77
Thu May 12 15:51:50 UTC 2022: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   int i,j,k;
           ^
sudoku.c:47:9: error: unused variable ‘j’ [-Werror=unused-variable]
   int i,j,k;
         ^
cc1: all warnings being treated as errors
Compilation failed
67d5430
Thu May 12 15:51:59 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d7a3341
Thu May 12 15:52:57 UTC 2022: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:8: error: redefinition of ‘arreglo’
   int *arreglo = (int*) calloc(10,sizeof(int));
        ^~~~~~~
sudoku.c:49:8: note: previous definition of ‘arreglo’ was here
   int *arreglo = (int*) calloc(10,sizeof(int));
        ^~~~~~~
Compilation failed
154c2e6
Thu May 12 15:54:24 UTC 2022: 
 sudoku.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
e0f473c
Thu May 12 17:20:18 UTC 2022: 
 tests:  3|4
total_score: 20/70
f71dfb2
Thu May 12 17:22:02 UTC 2022: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  4|4
total_score: 25/70
d0bfd7e
Thu May 12 17:22:49 UTC 2022: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
321b5b0
Thu May 12 17:28:51 UTC 2022: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:79:7: error: redeclaration of ‘k’ with no linkage
   int k,p;
       ^
sudoku.c:47:11: note: previous declaration of ‘k’ was here
   int i,j,k;
           ^
sudoku.c:85:18: error: ‘nodo’ undeclared (first use in this function); did you mean ‘Node’?
     printf("%d ",nodo->sudo[i][j]);
                  ^~~~
                  Node
sudoku.c:85:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:84:9: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:83:9: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
cc1: all warnings being treated as errors
Compilation failed
0cb81e9
Thu May 12 17:29:01 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:79:7: error: redeclaration of ‘k’ with no linkage
   int k,p;
       ^
sudoku.c:47:11: note: previous declaration of ‘k’ was here
   int i,j,k;
           ^
sudoku.c:85:18: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
     printf("%d ",node->sudo[i][j]);
                  ^~~~
                  Node
sudoku.c:85:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:84:9: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:83:9: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
cc1: all warnings being treated as errors
Compilation failed
3861108
Thu May 12 17:29:15 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:85:18: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
     printf("%d ",node->sudo[i][j]);
                  ^~~~
                  Node
sudoku.c:85:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:84:9: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:83:9: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
cc1: all warnings being treated as errors
Compilation failed
88fd118
Thu May 12 17:29:31 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:85:18: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
     printf("%d ",node->sudo[i][j]);
                  ^~~~
                  Node
sudoku.c:85:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2d64ae0
Thu May 12 17:29:48 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:85:18: error: expected expression before ‘Node’
     printf("%d ",Node->sudo[i][j]);
                  ^~~~
Compilation failed
dac2362
Thu May 12 17:30:06 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
9da2fb4
Thu May 12 17:30:50 UTC 2022: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
5032707
Thu May 12 17:31:44 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
83b8db4
Thu May 12 17:32:07 UTC 2022: 
 sudoku.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  5|3
total_score: 35/70
2425fd7
Thu May 12 17:32:18 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b545098
Thu May 12 17:32:26 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
a8ef2ad
Thu May 12 17:32:32 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6eb080d
Thu May 12 17:33:21 UTC 2022: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
2938853
Thu May 12 17:34:36 UTC 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:88:23: error: subscripted value is neither array nor pointer nor vector
       aux = arreglo[i][j];
                       ^
Compilation failed
a60a478
Thu May 12 17:34:46 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
fc8c917
Thu May 12 17:35:28 UTC 2022: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
2f84341
Thu May 12 17:38:07 UTC 2022: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
dfaead7
Thu May 12 17:38:52 UTC 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
38683ea
Thu May 12 17:39:41 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
8e63397
Thu May 12 17:43:51 UTC 2022: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_final’:
sudoku.c:125:7: error: unused variable ‘flag’ [-Werror=unused-variable]
   int flag;
       ^~~~
cc1: all warnings being treated as errors
Compilation failed
82b23e6
Thu May 12 17:44:00 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 55/70
26f4761
Thu May 12 18:03:51 UTC 2022: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:136:10: error: dereferencing pointer to incomplete type ‘Stack {aka struct List}’
   while(S->size != 0){
          ^~
sudoku.c:137:15: error: void value not ignored as it ought to be
     Node *n = pop(S);
               ^~~
sudoku.c:140:5: error: unknown type name ‘node’; did you mean ‘Node’?
     node* aux= first(adj);
     ^~~~
     Node
Compilation failed
47d5e8c
Thu May 12 18:04:13 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:136:10: error: ‘S’ is a pointer; did you mean to use ‘->’?
   while(S.size != 0){
          ^
          ->
sudoku.c:137:15: error: void value not ignored as it ought to be
     Node *n = pop(S);
               ^~~
Compilation failed
358bb61
